<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView android:id="@+id/imageViewIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:src="@drawable/btpitlogo"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/header_post"
            app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
            app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
            app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
        <EditText android:id="@+id/editTextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="Введите текст заголовка"
            android:visibility="invisible"
            android:layout_marginStart="10dp"
            android:text="@string/header_post"
            app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
            app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
            app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
        <com.google.android.material.textview.MaterialTextView android:id="@+id/textViewDataTime"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/dataTime_post"
            android:shadowColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
            app:layout_constraintBottom_toBottomOf="@id/imageViewIcon"
            app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
        <ImageButton
            android:id="@+id/buttonMore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/tochki"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/FrameLayoutContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">
        <TextView android:id="@+id/textViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_post"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp"
            android:padding="10dp"/>
        <EditText android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="15sp"
            android:hint="@string/write_content"
            android:text="@string/content_post"
            android:layout_marginHorizontal="5dp"
            android:padding="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/FrameLayoutContentURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FrameLayoutContentText">
        <TextView android:id="@+id/textViewContentURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:autoLink="web"
            android:linksClickable="true"
            android:textSize="15sp"
            android:layout_marginHorizontal="5dp"
            android:padding="10dp"/>
        <EditText android:id="@+id/editTextContentURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="15sp"
            android:hint="@string/add_link"
            android:text=""
            android:layout_marginHorizontal="5dp"
            android:padding="10dp"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/imageViewImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FrameLayoutContentURL" />
    <ImageButton
        android:id="@+id/imageButtonPlay"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:padding="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/imageViewImage"
        app:layout_constraintStart_toStartOf="@+id/imageViewImage"
        app:layout_constraintTop_toTopOf="@+id/imageViewImage"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewImage"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLikeShareSees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewImage">

        <ImageButton
            android:id="@+id/buttonLike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:padding="0dp"
            android:src="@drawable/likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAmountLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-7dp"
            android:text="999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonLike"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonShare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="#00FFFFFF"
            android:padding="0dp"
            android:src="@drawable/repost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewAmountLike"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAmountShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-7dp"
            android:text="999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonShare"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageViewSee"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/btpitlogo"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_amount_views"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_amount_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="4.1K"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutLikeShareSees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.5">

        <Button android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Отмена"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Сохранить"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>